--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,15 +17,20 @@
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+    background-image: url("../../public/images/new-frontier.jpg");
+    background-color: black;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: 100vw 100vh;
+    
 }
 
 @layer utilities {
