added styling and pokeball spin animation

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,3 +38,19 @@ body {
     text-wrap: balance;
   }
 }
+
+/* My Styles */
+@keyframes pokeball-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .pokeball {
+    animation: pokeball-spin infinite 05s linear;
+  }
+}
