changed naming of pokeball class to pokeball-spinning

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -50,7 +50,7 @@ body {
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .pokeball {
+  .pokeball-spin {
     animation: pokeball-spin infinite 05s linear;
   }
 }
